--- a/home/index.css
+++ b/home/index.css
@@ -49,11 +49,8 @@ img {
 }
 /*mouse right-click */
 .right-click {
-  /* display: none; */
+  display: none;
   position: absolute;
-  /* left: 0; */
-  /* right: 0; */
-  /* top: 0; */
   z-index: 1;
   list-style: none;
   background: rgb(153, 153, 153);
